R&E fix spacing

--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -105,3 +105,7 @@ input[type=text] {
 #records th {
     font-weight: bold;
 }
+
+#updateDialog textarea{
+    line-height: 14px;
+}
